--- a/edulink/templates/test.phtml
+++ b/edulink/templates/test.phtml
@@ -1,8 +1,8 @@
 <?php
-/** @var $var */
+/** @var $foo */
 /** @var $pageTitle */
 ?>
     <h1><?= $pageTitle ?></h1>
     this is a test.
 
-<?= $var ?>
+<?= $foo ?>
